add min/max date

--- a/Code/Exploratory Data Analysis/Credit Ratings EDA.ipynb
+++ b/Code/Exploratory Data Analysis/Credit Ratings EDA.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
      "text": [
       "<>:3: SyntaxWarning: invalid escape sequence '\\B'\n",
       "<>:3: SyntaxWarning: invalid escape sequence '\\B'\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_18896\\27064269.py:3: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_1044\\27064269.py:3: SyntaxWarning: invalid escape sequence '\\B'\n",
       "  corporate_rating = pd.read_csv('~\\Box\\STAT 222 Capstone\\Intermediate Data\\combined_credit_rating_data.csv')\n"
      ]
     },
@@ -307,7 +307,7 @@
        "[8732 rows x 13 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
      "text": [
       "<>:3: SyntaxWarning: invalid escape sequence '\\B'\n",
       "<>:3: SyntaxWarning: invalid escape sequence '\\B'\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_18896\\1924749755.py:3: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_1044\\1924749755.py:3: SyntaxWarning: invalid escape sequence '\\B'\n",
       "  company_sectors = pd.read_csv('~\\Box\\STAT 222 Capstone\\Intermediate Data\\earnings_call_company_sectors.csv')\n"
      ]
     },
@@ -632,7 +632,7 @@
        "[8732 rows x 15 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
        "std                              NaN               1.290282          0.511230"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
        "<Axes: title={'center': 'Issuances of Each Rating'}, xlabel='Rating'>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -938,14 +938,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_18896\\2179924635.py:7: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_1044\\2179924635.py:7: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  plt.gca().set_xticklabels(map(f, plt.gca().get_xticklabels()))\n"
      ]
     },
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
        "886"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1003,7 @@
        "<Axes: title={'center': 'Number of Rating Issuances by Earnings Call Sector'}, ylabel='sector'>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
        "<Axes: title={'center': 'Number of Firms by Earnings Call Sector'}, ylabel='sector'>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1376,7 @@
        "[3171 rows x 16 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1391,7 +1391,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2010-04-06 00:00:00\n",
+      "2016-12-23 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Min and max of Date\n",
+    "print(s_and_p_2010_2016_data['Date'].min())\n",
+    "print(s_and_p_2010_2016_data['Date'].max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1420,7 @@
        "638"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1412,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1512,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1541,7 @@
        "<Axes: title={'center': 'Number of Rating Issuances by Earnings Call Sector'}, ylabel='sector'>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1543,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1552,7 +1572,7 @@
        "<Axes: title={'center': 'Number of Firms by Earnings Call Sector'}, ylabel='sector'>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
