testing notebook size

--- a/Code/Data Loading and Cleaning/Correct Tabular Financial Statements Data.ipynb
+++ b/Code/Data Loading and Cleaning/Correct Tabular Financial Statements Data.ipynb
@@ -15,6 +15,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Inner join the three tabuler_fin_data files (columns symbol, calendarYear, period (with Q removed) from fin data)\n",
     "\n",
     "files_to_load = [r'balance_sheet', r'cash_flow_statement', r'income_statement']\n",
@@ -42,7 +51,7 @@
     "    merged.columns = merged.columns.str.replace('_y', '_' + file)\n",
     "    del df\n",
     "    \n",
-    "merged"
+    "merged.head(10)"
    ]
   },
   {
@@ -60,6 +69,15 @@
     "# pandas setting to display all rows\n",
     "pd.set_option('display.max_rows', None)\n",
     "merged.describe().T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Checking outliers for a good cutoff\n"
    ]
   },
   {
