split out all data eda

--- a/Code/Data Loading and Cleaning/Create Combined All Data - Fixed Quarter Dates.ipynb
+++ b/Code/Data Loading and Cleaning/Create Combined All Data - Fixed Quarter Dates.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -241,19 +241,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading balance_sheet\n",
-      "[3 2 1 4]\n",
-      "loading cash_flow_statement\n",
-      "[3 2 1 4]\n",
-      "loading income_statement\n",
-      "[3 2 1 4]\n",
+      "             date symbol reportedCurrency     cik fillingDate  \\\n",
+      "0      2023-09-30    BCE              CAD  718940  2023-09-30   \n",
+      "1      2023-06-30    BCE              CAD  718940  2023-06-30   \n",
+      "2      2023-03-31    BCE              CAD  718940  2023-03-31   \n",
+      "3      2022-12-31    BCE              CAD  718940  2022-12-31   \n",
+      "4      2022-09-30    BCE              CAD  718940  2022-09-30   \n",
+      "...           ...    ...              ...     ...         ...   \n",
+      "54213  2008-03-31   YORW              USD  108985  2008-05-09   \n",
+      "54214  2007-12-31   YORW              USD  108985  2008-03-11   \n",
+      "54215  2007-09-30   YORW              USD  108985  2007-11-08   \n",
+      "54216  2007-06-30   YORW              USD  108985  2007-08-09   \n",
+      "54217  2007-03-31   YORW              USD  108985  2007-05-09   \n",
+      "\n",
+      "              acceptedDate  calendarYear  period  cashAndCashEquivalents  \\\n",
+      "0      2023-09-29 20:00:00          2023       3             619000000.0   \n",
+      "1      2023-06-30 00:00:00          2023       2             900000000.0   \n",
+      "2      2023-03-31 00:00:00          2023       1             741000000.0   \n",
+      "3      2022-12-30 19:00:00          2022       4             149000000.0   \n",
+      "4      2022-09-29 20:00:00          2022       3             733000000.0   \n",
+      "...                    ...           ...     ...                     ...   \n",
+      "54213  2008-05-09 09:34:46          2008       1                     0.0   \n",
+      "54214  2008-03-11 10:48:22          2007       4                     0.0   \n",
+      "54215  2007-11-08 13:27:13          2007       3                     0.0   \n",
+      "54216  2007-08-09 08:38:13          2007       2                     0.0   \n",
+      "54217  2007-05-09 09:19:53          2007       1                     0.0   \n",
+      "\n",
+      "       shortTermInvestments  ...  incomeBeforeTaxRatio  incomeTaxExpense  \\\n",
+      "0                       0.0  ...              0.156250       243000000.0   \n",
+      "1                       0.0  ...              0.110452       273000000.0   \n",
+      "2                       0.0  ...              0.174760       270000000.0   \n",
+      "3                       0.0  ...              0.122535       222000000.0   \n",
+      "4                       0.0  ...              0.157537       178000000.0   \n",
+      "...                     ...  ...                   ...               ...   \n",
+      "54213                   0.0  ...              0.247136          649000.0   \n",
+      "54214                   0.0  ...              0.329490          902000.0   \n",
+      "54215                   0.0  ...              0.348068         1125000.0   \n",
+      "54216                   0.0  ...              0.324165          920000.0   \n",
+      "54217                   0.0  ...              0.280433          745000.0   \n",
+      "\n",
+      "       netIncome_income_statement  netIncomeRatio   eps  epsdiluted  \\\n",
+      "0                     687000000.0        0.112993  0.70        0.70   \n",
+      "1                     375000000.0        0.061820  0.37        0.37   \n",
+      "2                     771000000.0        0.127354  0.79        0.79   \n",
+      "3                     572000000.0        0.088834  0.58        0.58   \n",
+      "4                     715000000.0        0.118692  0.83        0.83   \n",
+      "...                           ...             ...   ...         ...   \n",
+      "54213                   1206000.0        0.160671  0.11        0.11   \n",
+      "54214                   1670000.0        0.213938  0.15        0.15   \n",
+      "54215                   1757000.0        0.212198  0.15        0.15   \n",
+      "54216                   1661000.0        0.208616  0.15        0.15   \n",
+      "54217                   1326000.0        0.179553  0.12        0.12   \n",
+      "\n",
+      "       weightedAverageShsOut  weightedAverageShsOutDil  \\\n",
+      "0                912300000.0               912300000.0   \n",
+      "1                912200000.0               912500000.0   \n",
+      "2                912100000.0               912300000.0   \n",
+      "3                912000000.0               912200000.0   \n",
+      "4                911900000.0               912300000.0   \n",
+      "...                      ...                       ...   \n",
+      "54213             10963636.0                10963636.0   \n",
+      "54214             10963636.0                10963636.0   \n",
+      "54215             11713333.0                11713333.0   \n",
+      "54216             11073333.0                11073333.0   \n",
+      "54217             11050000.0                11050000.0   \n",
+      "\n",
+      "                                   link_income_statement  \\\n",
+      "0                                                   None   \n",
+      "1                                                   None   \n",
+      "2                                                   None   \n",
+      "3                                                   None   \n",
+      "4                                                   None   \n",
+      "...                                                  ...   \n",
+      "54213  https://www.sec.gov/Archives/edgar/data/108985...   \n",
+      "54214  https://www.sec.gov/Archives/edgar/data/108985...   \n",
+      "54215  https://www.sec.gov/Archives/edgar/data/108985...   \n",
+      "54216  https://www.sec.gov/Archives/edgar/data/108985...   \n",
+      "54217  https://www.sec.gov/Archives/edgar/data/108985...   \n",
+      "\n",
+      "                              finalLink_income_statement  \n",
+      "0                                                   None  \n",
+      "1                                                   None  \n",
+      "2                                                   None  \n",
+      "3                                                   None  \n",
+      "4                                                   None  \n",
+      "...                                                  ...  \n",
+      "54213  https://www.sec.gov/Archives/edgar/data/108985...  \n",
+      "54214  https://www.sec.gov/Archives/edgar/data/108985...  \n",
+      "54215  https://www.sec.gov/Archives/edgar/data/108985...  \n",
+      "54216  https://www.sec.gov/Archives/edgar/data/108985...  \n",
+      "54217  https://www.sec.gov/Archives/edgar/data/108985...  \n",
+      "\n",
+      "[54218 rows x 126 columns]\n",
       "     ticker          fixed_quarter_date earnings_call_date Rating  \\\n",
       "0      ABBV  2014-10-01 00:00:00.000000         2014-07-25      A   \n",
       "1      ABBV  2015-01-01 00:00:00.000000         2014-10-31      A   \n",
@@ -296,7 +382,7 @@
       "     incomeBeforeTaxRatio incomeTaxExpense netIncome_income_statement  \\\n",
       "0                0.290905      335000000.0               1.098000e+09   \n",
       "1                0.136880      181000000.0               5.060000e+08   \n",
-      "2               -0.190205     -227000000.0              -8.100000e+08   \n",
+      "2               -0.190205        -227000.0              -8.100000e+05   \n",
       "3                0.276984      374000000.0               1.022000e+09   \n",
       "4                0.306484      312000000.0               1.366000e+09   \n",
       "...                   ...              ...                        ...   \n",
@@ -358,34 +444,17 @@
       "4370  https://www.sec.gov/Archives/edgar/data/155528...  \n",
       "4371  https://www.sec.gov/Archives/edgar/data/155528...  \n",
       "\n",
-      "[4372 rows x 154 columns]\n"
+      "[4372 rows x 148 columns]\n"
      ]
     }
    ],
    "source": [
-    "# Inner join this with the three tabuler_fin_data files (on columns company, year, quarter from earnings calls and columns symbol, calendarYear, period (with Q removed) from fin data)\n",
+    "# Load tabular financial statement data\n",
+    "df = pd.read_parquet(r'~\\Box\\STAT 222 Capstone\\Intermediate Data\\Tabular_Fin\\combined_corrected_tabular_financial_statements_data.parquet')\n",
+    "print(df)\n",
     "\n",
-    "files_to_load = [r'balance_sheet', r'cash_flow_statement', r'income_statement']\n",
-    "\n",
-    "# Loop through and inner join each file onto merged\n",
-    "for file in files_to_load:\n",
-    "    print('loading ' + file)\n",
-    "    df = pd.read_csv(r'~\\Box\\STAT 222 Capstone\\Intermediate Data\\Tabular_Fin\\tabuler_fin_data(' + file + r').csv')\n",
-    "    # Delete the first column (index)\n",
-    "    df = df.iloc[:,1:]\n",
-    "    # Remove Q from period\n",
-    "    df['period'] = df['period'].str.replace('Q', '')\n",
-    "    # Convert to int\n",
-    "    df['period'] = df['period'].astype(int)\n",
-    "    # Print values of Period\n",
-    "    print(df['period'].unique())\n",
-    "    merged = pd.merge(merged, df, left_on=['company', 'year', 'quarter'], right_on=['symbol', 'calendarYear', 'period'], how='inner')\n",
-    "    # Remove suffix _x\n",
-    "    merged.columns = merged.columns.str.replace('_x', '')\n",
-    "    # Harmonize suffix y\n",
-    "    merged.columns = merged.columns.str.replace('_y', '_' + file)\n",
-    "    del df\n",
-    "    \n",
+    "# Perform merge\n",
+    "merged = pd.merge(merged, df, left_on=['company', 'year', 'quarter'], right_on=['symbol', 'calendarYear', 'period'], how='inner')    \n",
     "print(merged)"
    ]
   },
@@ -398,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +598,7 @@
        "9                                   NaN  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -657,24 +726,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "date range\n",
-      "2010-07-31\n",
-      "2016-09-30\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Print range of dates\n",
-    "print('date range')\n",
-    "print(merged['date'].min())\n",
-    "print(merged['date'].max())\n",
+    "# print('date range')\n",
+    "# print(merged['date'].min())\n",
+    "# print(merged['date'].max())\n",
     "\n",
     "# Range of year, credit_rating_year, calendarYear\n",
     "# for variable in ['year', 'credit_rating_year', 'calendarYear']:\n",
@@ -685,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -694,9 +753,9 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 4372 entries, 0 to 4371\n",
-      "Columns: 158 entries, ticker to Change Since Last Fixed Quarter Date\n",
-      "dtypes: float64(104), int32(3), int64(11), object(40)\n",
-      "memory usage: 5.2+ MB\n",
+      "Columns: 152 entries, ticker to Change Since Last Fixed Quarter Date\n",
+      "dtypes: float64(104), int32(1), int64(9), object(38)\n",
+      "memory usage: 5.1+ MB\n",
       "None\n",
       "Index(['ticker', 'fixed_quarter_date', 'earnings_call_date', 'Rating',\n",
       "       'Rating Agency Name', 'rating_date', 'Source', 'Rating Rank AAA is 10',\n",
@@ -708,7 +767,7 @@
       "       'rating_on_previous_fixed_quarter_date AAA is 10',\n",
       "       'Change Direction Since Last Fixed Quarter Date',\n",
       "       'Change Since Last Fixed Quarter Date'],\n",
-      "      dtype='object', length=158)\n"
+      "      dtype='object', length=152)\n"
      ]
     }
    ],
@@ -721,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
